--- a/assets/index.less
+++ b/assets/index.less
@@ -5,6 +5,8 @@
 @font: "Inter", Arial, Helvetica, sans-serif;
 @text-color: #fff;
 @text-color-secondary: #898CA9;
+@green: #0DBB7C;
+@red: #FF8282;
 @primary: #B982FF;
 @accent: #18C8FF;
 @gradient: linear-gradient(45deg, #933FFE 0%,  #18C8FF 100%);
@@ -46,6 +48,7 @@ body {
     font-size: 16px;
     line-height: 1;
     font-weight: 600;
+    margin: 0 auto;
 }
 
 .gradient-btn {
@@ -275,6 +278,7 @@ ul, h1 {
     align-items: center;
     justify-content: center;
     transition: left 0.3s ease;
+    z-index: 3;
 
     .burger-menu-wrapper, .mob-menu ul {
         display: flex;
@@ -301,6 +305,130 @@ ul, h1 {
     
     .login-buttons {
         display: none;
+    }
+}
+
+.email-field {
+    position: relative;
+    width: 304px;
+    height: 56px;
+
+    &:hover {
+        .email-btn {
+            right: 10px;
+        }
+    }
+}
+
+.email-btn {
+    cursor: pointer;
+    z-index: 3;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 15px;
+    width: 24px;
+    height: 24px;
+    transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+}
+
+.email-btn:after {
+    content: '';
+    background: url("/assets/img/arrow-input.png");
+    background-size: contain;
+    width: 24px;
+    height: 24px;
+    background-position: top center;
+    background-repeat: no-repeat;
+    display: flex;
+}
+
+
+
+input[type="email"] {
+    padding: 20px 40px 20px 20px;
+    font-size: 14px; 
+    width: 304px;
+    height: 56px;
+    background: transparent;
+    color: #fff;
+    font-weight: 400;
+    outline: none;
+    border-radius: 10px; 
+    border: 1px solid transparent; 
+    z-index: 2;
+    position: relative;
+}
+
+input[type="email"]:focus {
+    outline: none;
+}
+
+input[type="email"]::placeholder {
+    color: @text-color-secondary;
+}
+
+.email-field-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 10px; 
+    border: 1px solid transparent; 
+    background: @gradient border-box; 
+    mask: /*4*/
+        linear-gradient(#000 0 0) padding-box, 
+        linear-gradient(#000 0 0);
+    mask-composite: exclude; 
+    z-index: 1;
+
+
+}
+
+
+.btn-arrow {
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1;
+    color: @primary;
+    position: relative;
+
+    span:after {
+        content: '';
+        position: absolute;
+        background: url("/assets/img/arrow.png");
+        background-size: contain;
+        top: -4px;
+        right: -30px;
+        width: 24px;
+        height: 24px;
+        background-position: top center;
+        background-repeat: no-repeat;
+        transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
+    }
+
+    span {
+        cursor: pointer;
+
+        &:before {
+            content: "";
+            transition: @transition;
+        }
+
+        &:hover {
+            &:before {
+                content: "";
+                height: 1px;
+                background-color: @primary;
+                width: 100%;
+                position: absolute;
+                bottom: -1px; 
+                left: 0;
+            }
+
+            &:after {
+                right: -35px;
+            }
+        }
     }
 }
 
@@ -346,6 +474,7 @@ ul, h1 {
             font-weight: 800;
             font-size: 32px;
             line-height: 1.3;
+            text-align: center;
         }
 
         .grow-card-icon img {
@@ -362,49 +491,26 @@ ul, h1 {
             max-width: 330px;
         }
 
-        .grow-card-button {
-            font-weight: 600;
-            font-size: 16px;
-            line-height: 1;
-            color: @primary;
-            position: relative;
-
-            span:after {
-                content: '';
-                position: absolute;
-                background: url("/assets/img/arrow.png");
-                background-size: contain;
-                top: -4px;
-                right: -30px;
-                width: 24px;
-                height: 24px;
-                background-position: top center;
-                background-repeat: no-repeat;
-                transition: all 0.3s cubic-bezier(0.215, 0.610, 0.355, 1);
-            }
-
-            span {
-                cursor: pointer;
-
-                &:hover {
-                    &:before {
-                        content: "";
-                        height: 1px;
-                        background-color: @primary;
-                        width: 100%;
-                        position: absolute;
-                        bottom: -1px; 
-                        left: 0;
-                    }
-
-                    &:after {
-                        right: -35px;
-                    }
-                }
-            }
-        }
     }
 }
+
+.title-section {
+    font-weight: 900;
+    font-size: 50px;
+    line-height: 1.3;
+    text-align: center;
+}
+
+.desc-section {
+    max-width: 580px;
+    margin: 0 auto;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    color: @text-color-secondary;
+}
+
 
 .investment-section {
     min-height: 562px;
@@ -421,21 +527,6 @@ ul, h1 {
         align-items: center;
         margin: 0 auto;
         z-index: 2;
-    }
-
-    .investment-card-title {
-        font-weight: 900;
-        font-size: 50px;
-        line-height: 1.3;
-    }
-
-    .investment-card-desc {
-        max-width: 580px;
-        margin: 0 auto;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        color: @text-color-secondary;
     }
 
     .investment-card-button {
@@ -489,22 +580,6 @@ ul, h1 {
         z-index: 2;
     }
 
-    .support-card-title {
-        font-weight: 900;
-        font-size: 50px;
-        line-height: 1.3;
-    }
-
-    .support-card-desc {
-        max-width: 580px;
-        text-align: left;
-        margin: 0 auto;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        color: @text-color-secondary;
-    }
-
     .support-card-button {
         min-width: 156px;
         height: 56px;
@@ -534,6 +609,372 @@ ul, h1 {
     }
 }
 
+.buySell-section {
+    min-height: 980px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    position: relative;
+
+    &:before {
+        content: '';
+        position: absolute;
+        background: url("/assets/img/buySell-gradient.png");
+        background-size: cover;
+        width: 562px;
+        height: 1114px;
+        right: 0;
+        background-repeat: no-repeat;
+        background-position: top right;
+        top: -400px;
+    }
+
+    .buySell-section-wrapper {
+        display: flex;
+        max-width: 1180px;
+        flex-direction: column;
+        gap: 30px;
+        padding: 20px;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        z-index: 2;
+    }
+
+    .chart {
+        display: flex;
+        width: 100%;
+        margin-top: 20px;
+
+        .chart-wrapper {
+            width: 100%;
+            flex-grow: 1;
+            display: grid;
+            grid-template-rows: repeat(5, 1fr);
+            background: #1A1B23;
+            border-radius: 25px;
+        }
+
+        .chart-section {
+            width: 100%;
+            flex-grow: 1;
+            display: grid;
+            grid-template-columns: repeat(6, 1fr);
+            padding: 10px 30px;
+            gap: 25px;
+            align-items: center;
+            position: relative;
+
+            &:after{
+                content: "";
+                height: 1px;
+                background-color: #2B2C3B;
+                width: 95%;
+                position: absolute;
+                bottom: 0px;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+
+        .chart-section:last-of-type {
+            &:after{
+                display: none;
+            }
+        }
+
+        .chart-name {
+            text-align: left;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 1.5;
+            text-transform: capitalize;
+        }
+
+        .chart-currency {
+            text-align: left;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 1.5;
+            text-transform: uppercase;
+            color: @primary;
+        }
+
+        .chart-current-price {
+            text-align: right;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 1.5;
+        }
+
+        .chart-current-price {
+            text-align: right;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 1.5;
+        }
+
+        .chart-percent {
+            text-align: right;
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 1.5;
+        }
+
+        .chart-btn {
+            align-self: center;
+            display: flex;
+            justify-content: flex-end;
+            padding-right: 25px;
+        }
+
+        .btn-arrow {
+            width: fit-content;
+            height: fit-content;
+            color: #fff;
+    
+            span:after {
+                background: url("/assets/img/arrow-white.png");
+            }
+        
+            span {
+                &:hover {
+                    &:before {
+                        background-color: #fff;
+                    }
+                }
+            }
+        }
+    }
+
+    
+}
+
+.green-stat {
+    color: @green;
+}
+
+.red-stat {
+    color: @red;
+}
+
+canvas {
+    height: 56px !important;
+    width: 154px !important;
+}
+
+.first-step-section {
+    min-height: 531px;
+    display: flex;
+    position: relative;
+
+    &:before {
+        content: '';
+        position: absolute;
+        background: url("/assets/img/investing-circles.png");
+        background-size: cover;
+        width: 600px;
+        height: 981px;
+        left: 0;
+        background-repeat: no-repeat;
+        background-position: top right;
+        bottom: 0;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        background: url("/assets/img/investing-gradient.png");
+        background-size: contain;
+        width: 1440px;
+        height: 976px;
+        right: 0;
+        background-repeat: no-repeat;
+        background-position: top right;
+        top: -200px;
+    }
+    
+    .first-step-section-wrapper {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        max-width: 1200px;
+        gap: 20px;
+        padding: 20px 20px 20px;
+        text-align: center;
+        align-items: center;
+        position: relative;
+        margin: 0 auto;
+
+        
+    }
+
+    .first-step-card-icon {
+        z-index: 2;
+    }
+    
+    .first-step-card-icon {
+        position: absolute;
+        right: 0;
+    }
+
+    .first-step-section-info {
+        gap: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+        z-index: 2;
+    }
+
+    .first-step-card-button {
+        min-width: 156px;
+        height: 56px;
+    }
+}
+
+.transmitions-section {
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-bottom: 1px solid #1A1B23;
+
+    .transmitions-section-wrapper {
+        display: flex;
+        max-width: 1180px;
+        flex-direction: column;
+        gap: 30px;
+        padding: 20px;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        z-index: 2;
+    }
+
+    .transmitions-card-desc a{
+        color: #fff;
+        position: relative;
+        
+
+        &:before {
+            content: "";
+            transition: @transition;
+        }
+
+        &:hover {
+            &:before {
+                content: "";
+                height: 1px;
+                background-color: #fff;
+                width: 100%;
+                position: absolute;
+                bottom: -1px; 
+                left: 0;
+            }
+        }
+    }
+}
+
+.footer {
+    min-height: 500px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    &:before {
+        content: '';
+        position: absolute;
+        background: url("/assets/img/footer-gradient.png");
+        background-size: cover;
+        width: 100%;
+        height: 981px;
+        left: 0;
+        background-repeat: no-repeat;
+        background-position: top right;
+        bottom: 0;
+    }
+
+    .footer-wrapper {
+        display: grid;
+        max-width: 1180px;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 80px 20px;
+        align-items: start;
+        justify-content: center;
+        position: relative;
+        z-index: 2;
+        justify-items: center;
+
+       
+    }
+
+    .logo {
+        opacity: 20%;
+    }
+
+    .about-section {
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
+
+    .about-desc {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.5;
+        opacity: 30%;
+    }
+
+    .about-desc p:first-child {
+        margin-bottom: 20px;
+    }
+
+    .copyright-section {
+        font-weight: 400;
+        font-size: 12px;
+        opacity: 30%;
+    }
+
+    .links-section p, .policy-section p {
+        font-size: 14px;
+        line-height: 1;
+        opacity: 40%;
+        font-weight: 600;
+        margin-bottom: 20px;
+    }
+
+    nav {
+        ul {
+            list-style-type: none;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            li a{
+                color: @text-color;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 1;
+                transition: @transition;
+                position: relative;
+                opacity: 30%;
+
+                &:hover {
+                    &:after {
+                        content: "";
+                        height: 1px;
+                        background-color: @text-color;
+                        width: 100%;
+                        position: absolute;
+                        bottom: -1px;
+                        left: 0;
+                    }
+                }
+            }
+        }
+    }
+
+}
 
 
 @media (max-width: 768px) {
@@ -564,9 +1005,56 @@ ul, h1 {
     .intro-content .intro-content-wrapper {
         padding: 60px 20px 20px 20px;
     }
+
+    .footer .footer-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: start;
+        gap: 40px;
+    }
+
+   
+    
+
+
+    .grow-section .grow-section-wrapper {
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: 1fr;
+    }
+    
 }
 
-@media (max-width: 480px) {
+@media (max-width: 785px) {
+    .buySell-section .chart .chart-section {
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        justify-content: center;
+        gap: 10px;
+        padding: 20px 30px;
+    }
+
+    .first-step-section .first-step-card-icon {
+        display: none;
+    }
+
+    .support-section .support-section-wrapper:before, .support-section .support-card-icon {
+        display: none;
+    }
+
+    .first-step-section .first-step-section-wrapper, .support-section .support-section-wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    .support-section .support-section-info {
+        padding: 20px;
+    }
+
+    .main-wrapper {
+        overflow: hidden;
+    }
+}
+
+@media (max-width: 520px) {
     .header .login-buttons {
         display: none;
     }
