--- a/assets/index.less
+++ b/assets/index.less
@@ -1052,6 +1052,10 @@ canvas {
     .main-wrapper {
         overflow: hidden;
     }
+
+    .burger-menu-wrapper .logo {
+        flex: 1;
+    }
 }
 
 @media (max-width: 520px) {
@@ -1059,9 +1063,7 @@ canvas {
         display: none;
     }
 
-    .logo {
-        flex: 1;
-    }
+   
 
     .burger-menu  .login-buttons {
         display: flex;
