--- a/assets/index.less
+++ b/assets/index.less
@@ -1063,7 +1063,9 @@ canvas {
         display: none;
     }
 
-   
+    .logo {
+        flex: 1;
+    }
 
     .burger-menu  .login-buttons {
         display: flex;
